Fixed index screen on IE

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,12 @@
+/*Stuff to make it work in IE*/
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .enter {
+    top: 390px !important;
+  }
+
+/*End of browser specific stuff*/
+
 img.logo {
   max-height: 300px;
   position: fixed;
